Changed the markup for the login page.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,15 +18,17 @@
 	<ion-list>
 
 		<ion-item>
+			<ion-label stacked>Gebruikersnaam</ion-label>
 			<ion-input type="text" placeholder="Gebruikersnaam"></ion-input>
 		</ion-item>
 
 		<ion-item>
+			<ion-label stacked>Wachtwoord</ion-label>
 			<ion-input type="password" placeholder="Wachtwoord"></ion-input>
 		</ion-item>
 
 	</ion-list>
 
-	<button color="secondary" ion-button (click)="login()" item-right>Inloggen</button>
+	<button color="secondary" ion-button (click)="login()" item-right block>Inloggen</button>
 
 </ion-content>
